--- a/SGP/requerimentoGeral.html
+++ b/SGP/requerimentoGeral.html
@@ -69,11 +69,11 @@
                         </td>
                         <td>                            
                             <input type="radio" name="vinculo" id="servidor" >
-                            <label for="servidor" class="radioButton">Servidor</label>
+                            <label for="servidor">Servidor</label>
 
                             
                             <input type="radio" name="vinculo" id="contratado">
-                            <label for="contratado" class="radioButton">Contratado pela SGP</label>
+                            <label for="contratado">Contratado pela SGP</label>
                         </td>
                       </tr>
                       <tr>
